# game_dev_magic

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  install.sh  run.sh
scripts/iterm2/: game_dev_magic.py  game_dev_magic_profile.json
src/: main.c
